...
  };

  return (
    <KeyboardAvoidingView
      behavior={Platform.OS === "ios" ? "padding" : "height"}
      className="flex-1 bg-background"
      testID="verify-screen"
    >
      <ScrollView
        contentContainerClassName="flex-grow justify-center p-6"
        keyboardShouldPersistTaps="handled"
        showsVerticalScrollIndicator={false}
      >
...
                <Text className="text-foreground">Resend Email</Text>
              </LoadingButton>
              <Button
                variant="link"
                onPress={() => router.replace("/(external)/sign-in")}
                className="w-full"
                testID="back-to-sign-in-button"
              >
                <Text>Back to Sign In</Text>
              </Button>
              {resendMessage && (
                <Text
                  className={`text-center text-xs ${
...
